# abara-file-io

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish_to_pypi.yml  pull_request_check.yml
src/abara_file_io/: __init__.py  common_io_wrapper.py  ini.py  json.py  logger_config.py  main.py  pickle.py  text.py  toml.py  util.py  yaml.py
tests/: common_test_data.py  conftest.py  test_ini.py  test_json.py  test_text.py  test_toml.py  test_yaml.py
